# pink-engine-gl

./: .clang-format  .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  build.bat  build.sh  common.h  host_device.h  log_pink_engine.txt  main.cpp  obj_loader.cpp  obj_loader.h  sahder.hpp
bin_x64/Release/: log_pink_engine.txt  pink_engine.exp  pink_engine.lib
include/: hello_vulkan.h  ui.hpp  utils.hpp
media/scenes/: car.mtl  car_body.mtl  sphere.mtl  sphere_old.mtl  wheel.mtl
pga/: CMakeLists.txt
pga/include/: pga3d.hpp
pga/src/: pga3d.cpp
pink_core/: CMakeLists.txt
pink_core/include/: pink_core.hpp
pink_core/src/: object_manager.cpp  pink_core.cpp
pink_graphics/: CMakeLists.txt
pink_graphics/include/: host_device.h  obj.hpp  obj_library.hpp  offscreen.hpp  pink_graphics.hpp  raytracer.hpp  solid_color.hpp
pink_graphics/res/: frag_shader.frag  host_device.h  test.vert
pink_graphics/src/: obj_library.cpp  offscreen.cpp  pink_graphics.cpp  raytracer.cpp  solid_color.cpp
pink_physics/: CMakeLists.txt
pink_physics/docs/: general_concept.md
pink_physics/include/: pink_physics.hpp  pink_physics_colliders.hpp  pink_physics_shapes.hpp
pink_physics/src/: pink_physics.cpp  pink_physics_colliders.cpp  pink_physics_shapes.cpp
pink_structs/: CMakeLists.txt
pink_structs/include/: pink_structs.hpp  pink_structs_graphics.hpp  pink_structs_physics.hpp
spv/: frag_shader.frag.spv  passthrough.vert.spv  post.frag.spv  vert_shader.vert.spv
src/: hello_vulkan.cpp  main.cpp  ui.cpp  utils.cpp
